links were added

--- a/mysite.html
+++ b/mysite.html
@@ -97,7 +97,6 @@
   </section>
 
   <!-- Projects -->
-  <!-- Projects -->
 <section id="projects">
   <h2>My Projects</h2>
 
@@ -118,7 +117,7 @@
             track risk–utility and confirm consistency across tools.<br><br><br> Tech: ARX, R, R Studio, sdcMicro</p>
         </a>
 
-         <a class="project-card" href="https://github.com/mgalamo" target="_blank" rel="noopener">
+         <a class="project-card" href="https://github.com/mgalamo/melocherriessite" target="_blank" rel="noopener">
           <div class="project-thumb">
             <h3>Portfolio Website</h3>
             <img src="Personal Portfolio Picture.png" alt="Personal portfolio website preview">
@@ -153,7 +152,6 @@
              or book services. Each project sharpens brand identity, product storytelling, and 
              the key actions that matter for their businesses. <br><br><br><br> Tech: HTML, CSS, JavaScript</p>
         </a>
-
       </div><!-- /.carousel-track -->
     </div><!-- /.carousel-viewport -->
 
@@ -275,7 +273,7 @@
     }
     window.addEventListener("beforeunload", () => { if (vantaEffect) vantaEffect.destroy(); });
   </script>
-  
+
   <footer class="site-footer">
   <p>© <span id="year"></span> Melodie Galamo. All rights reserved.</p>
 </footer>
