--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <section class="hero" id="top">
     <h2 class="welcome-text">Welcome to my digital portfolio!</h2>
-    <img src="IMG_2014.jpg" alt="My portrait" class="hero-image">
+    <img src="IMG_2014.JPG" alt="My portrait" class="hero-image">
     <h2><span class="flasher"></span></h2>
     <p class="hero-subtext">
       On a mission to merge data science, creativity, <br>
