--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <header>
     <div class="site-header">
-      <h1 class="site-name">Melodie<br>Galamo</h1>
+      <h1 class="site-name">Melodie Galamo</h1>
 
       <div class="header-center">
         <ul>
